2007-03-11  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* worker/bloggers.xml: Switched to my blogger/blogspot feed, as I've found out how to extract an rss feed (instead 
	of the default atom one) to use here. My theSpoke blog is being deactivated.
	
2007-02-25  Aaron Bockover  <abockover@novell.com>

	* worker/bloggers.xml: Commented out Brandon Hale until he's done messing
	with his blog, updated his nick

2007-02-22	Boris Kirzner <borisk@mainsoft.com>

	* www/images/heads/borisk.png: New head.

2007-02-22  Ankit Jain  <jankit@novell.com>

	* worker/bloggers.xml: Update my feed URL.

2007-02-21  Ankit Jain  <jankit@novell.com>

	* worker/bloggers.xml: Update my feed URL.

2007-02-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* worker/bloggers.xml: Add my blog.

2007-02-12  Jonathan Pobst  <monkey@jpobst.com>

	* worker/bloggers.xml: Add my blog.

2007-02-12  Wade Berrier  <wberrier@novell.com>

	* worker/monologue-worker.cs: Don't show posts with invalid dates (DateTime.MinValue),
	instead, show error flag by user if they have entries with invalid dates.
	(Invalid dates are probably a bug in the originating rss feed, but as least if it happens,
	we will no longer have permalinks resulting from it)

2007-01-28  Joshua Tauberer

	* worker/bloggers.xml: Updated my feed URL.

2007-01-25  Alexandre Gomes  <alexmipego@gmail.com>

	* worker/bloggers.xml: Updated my feed.
	
2007-01-25  Alexandre Gomes  <alexmipego@gmail.com>

	* worker/monologue-worker.cs: Fixes a problem when servers return
	empty feeds with HTTP OK status.

2006-12-30  Lluis Sanchez  <lluis@ximian.com>

	* worker/bloggers.xml: I have a new blog URL.

2006-12-29  Jackson Harper  <jackson@ximian.com>

	* worker/bloggers.xml: I have a new blog URL.

2006-12-10  Aaron Bockover  <abockover@novell.com>

	* worker/bloggers.xml: Added Patrick van Staveren

2006-12-07  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* worker/bloggers.xml: Changed my blog address once again (maybe it
	will work this time).
